// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail sets a width when height is set 1`] = `
<RNSVGSvgView
  bbHeight={50}
  focusable={false}
  height={50}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
    }
  }
  title="Email icon"
/>
`;

exports[`2. iconfacebook sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 25,
    }
  }
/>
`;

exports[`3. iconforwardarrow sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 58.333333333333336,
      "width": 29.166666666666668,
    }
  }
/>
`;

exports[`4. iconstar sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-save-star"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 50,
    }
  }
  title="Save star"
  vbHeight={18}
  vbWidth={18}
  width={50}
/>
`;

exports[`5. iconcopylink sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-copy-link"
  bbHeight={50}
  bbWidth={15}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 15,
    }
  }
  title="Copy link to clipboard"
  vbHeight={15}
  vbWidth={15}
  width={15}
/>
`;

exports[`6. iconsavebookmark sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 16,
      "width": 12,
    }
  }
/>
`;

exports[`7. icontwitter sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 62.5,
    }
  }
/>
`;

exports[`8. iconvideo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 85,
    }
  }
/>
`;

exports[`9. iconvideo360player sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 54,
    }
  }
/>
`;

exports[`10. thestlogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 34.48275862068965,
      "width": 50,
    }
  }
/>
`;

exports[`11. thetimeslogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`12. closeicon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-close"
  bbHeight={50}
  bbWidth={28}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 28,
    }
  }
  title="Close Icon"
  vbHeight={28}
  vbWidth={28}
  width={28}
/>
`;

exports[`13. closeroundicon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height="24"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 24,
      "width": 24,
    }
  }
  vbHeight={24}
  vbWidth={24}
  width="24"
/>
`;

exports[`14. glassmagnifiericon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height="24"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 24,
      "width": 24,
    }
  }
  vbHeight={24}
  vbWidth={24}
  width="24"
/>
`;

exports[`15. leftchevron sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height="24"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 24,
      "width": 24,
    }
  }
  vbHeight={24}
  vbWidth={24}
  width="24"
/>
`;
